<resources>
    <string name="app_name">Touristo</string>
    <string name="text_logo">Touristo</string>
    <string name="text_hint_email">Email</string>
    <string name="text_hint_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_signup">Sign Up</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_instruction">Instructions</string>
    <string name="menu_thingtokeep">Things to keep</string>
    <string name="menu_tourType">Tour Type</string>
    <string name="menu_spotSearch">Spot Search</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="menu_event">Event</string>
    <string name="menu_helpline">HelpLines</string>
    <string name="menu_logout">Log Out</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="hint_email">Email</string>
</resources>
