<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ecomway.touristo.fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.ecomway.touristo.fragments.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />


    <fragment
        android:id="@+id/nav_instructions"
        android:name="com.ecomway.touristo.fragments.instructions.InstructionsFragment"
        android:label="@string/menu_instruction"
        tools:layout="@layout/fragment_instructions" />

    <fragment
        android:id="@+id/nav_event"
        android:name="com.ecomway.touristo.fragments.event.EventFragment"
        android:label="@string/menu_event"
        tools:layout="@layout/fragment_event" />

    <fragment
        android:id="@+id/nav_helpline"
        android:name="com.ecomway.touristo.fragments.helpline.HelplineFragment"
        android:label="@string/menu_helpline"
        tools:layout="@layout/fragment_helpline" />
    <fragment
        android:id="@+id/nav_thingtokeep"
        android:name="com.ecomway.touristo.fragments.ThingsToKeepFragment"
        android:label="@string/menu_helpline"
        tools:layout="@layout/fragment_helpline" />
    <fragment
        android:id="@+id/nav_tourType"
        android:name="com.ecomway.touristo.fragments.TourTypeFragment"
        android:label="@string/menu_tourType"
        tools:layout="@layout/fragment_tour_type" />
    <fragment
        android:id="@+id/nav_spotSearch"
        android:name="com.ecomway.touristo.fragments.SpotSearchFragment"
        android:label="@string/menu_spotSearch"
        tools:layout="@layout/fragment_spot_search" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.ecomway.touristo.fragments.LogOutFragment"
        android:label="Home"
        tools:layout="@layout/fragment_log_out"
     />
</navigation>